testCases/parserTestCases/correct/varDecTailC.cs16
/*
    This tests var name
    Author: Chris Kaebe
    Date: Feb 21, 2016
*/

int x[4], y[-5];

void main(int x){
    int x, y, z[5],a[x];
    ;
}